--- a/app/views/home/_goals.html.erb
+++ b/app/views/home/_goals.html.erb
@@ -15,21 +15,21 @@
       <ul>
         <li class="Goals__list-item">
           <div class="Goals__list-item-header">Patience</div>
-          <div>
+          <div class="Goals__list-item-body">
             Saves consistently, spends wisely and always asks
             before buying, "is this worth it; do I really need it?”
           </div>
         </li>
         <li class="Goals__list-item">
           <div class="Goals__list-item-header">Follow through.</div>
-          <div>
+          <div class="Goals__list-item-body">
             Takes agreements seriously by always sticking to his or her end of the
             bargain and holding others accountable
           </div>
         </li>
         <li class="Goals__list-item">
           <div class="Goals__list-item-header">Planning</div>
-          <div>
+          <div class="Goals__list-item-body">
             Budgets earning and spending while understanding the implications of debt 
             and the power of saving and investing          
           </div>
