--- a/app/assets/stylesheets/home/features.scss
+++ b/app/assets/stylesheets/home/features.scss
@@ -56,16 +56,22 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    margin-left: 25px;
     max-width: 350px;
+
+    @media (min-width: $desktop-width) {
+      margin-left: 25px;
+    }
 
     h4 {
       color: $tl-navy;
       margin: 20px 0 0 0;
       text-align: left;
       font-weight: 600;
+      text-align: center;
+      width: 100%;
 
       @media (min-width: $desktop-width) {
+        text-align: left;
         font-size: 20px;
       }
     }
