--- a/app/views/home/_features.html.erb
+++ b/app/views/home/_features.html.erb
@@ -2,7 +2,7 @@
   <div class="Content">
     <div class="Features__heading">
       <h3>
-        Till is building an app that helps families work better with money 
+        Till helps you raise kids with the habits, instincts, and skills to prosper
       </h3>
     </div>
     <div class="Features__items">
@@ -20,7 +20,7 @@
         <div class="Features__item-copy">
           <h4>Involve your whole community</h4>
           <p>
-            Friends and family contribute to college savings or that special thing rather than unwanted disposables. And everyone get to watch as their gifts add up to a meaningful impact on your kid’s life.
+            Friends and family contribute to college or saving for that special thing rather than unwanted presents. And, everyone gets to watch as their gifts add up to a meaningful impact on your kid’s life.          
           </p>
         </div>
       </div>
