--- a/app/views/home/_goals.html.erb
+++ b/app/views/home/_goals.html.erb
@@ -11,7 +11,7 @@
       </picture>
     </div>
     <div class="Goals__copy">
-      <h3>Let's make sure every child develops a healthy relationship with money</h3>
+      <h3>What your kids will learn when you give them money with Till</h3>
       <ul>
         <li class="Goals__list-item">
           <div class="Goals__list-item-header">Patience</div>
@@ -21,17 +21,15 @@
           </div>
         </li>
         <li class="Goals__list-item">
-          <div class="Goals__list-item-header">Follow through.</div>
+          <div class="Goals__list-item-header">Follow through</div>
           <div class="Goals__list-item-body">
-            Takes agreements seriously by always sticking to his or her end of the
-            bargain and holding others accountable
+            Take agreements seriously, stick to your end of the bargain, and hold others accountable.
           </div>
         </li>
         <li class="Goals__list-item">
           <div class="Goals__list-item-header">Planning</div>
           <div class="Goals__list-item-body">
-            Budgets earning and spending while understanding the implications of debt 
-            and the power of saving and investing          
+            Follow a budget and consider the future when saving, investing, and borrowing.
           </div>
         </li>
       <ul>
