--- a/app/views/home/_lead_value_prop.html.erb
+++ b/app/views/home/_lead_value_prop.html.erb
@@ -1,11 +1,11 @@
 <section class="LeadValueProp parent">
   <div class="Content">
     <h3>
-      What do kids learn when you give them money?
+      Let’s raise kids who are fiscally fit
     </h3>
     <p>
-      Till is a better way to give your kids money by simplifying 
-      and tracking the commitments tied to that giving. 
+      Till is building a platform and suite of financial products that help families work 
+      better with money.
     </p>
   </div>
 </section>
