--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,13 @@
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,800" rel="stylesheet">
   
-    <meta name="viewport"             content="width=device-width, initial-scale=1">
-    <meta property="og:url"           content="http://test.tillfinancial.io" />
-    <meta property="og:type"          content="website" />
-    <meta property="og:title"         content="Till" />
-    <meta property="og:description"   content="A better way to give your kids money." />
+    <meta name="viewport"            content="width=device-width, initial-scale=1">
+    <meta property="og:url"          content="https://tillfinancial.io" />
+    <meta property="og:type"         content="website" />
+    <meta property="og:site_name"    content="Till Financial" />
+    <meta property="og:url"          content="http://www.tillfinancial.io" />
+    <meta property="og:title"        content="Till: A better way to give your kids money"/>
+    <meta property="og:description"  content="Till is a platform and suite of tools that helps families work better with money" />
   </head>
 
   <body>
