moved to using rails credentials

--- a/app/views/home/_features.html.erb
+++ b/app/views/home/_features.html.erb
@@ -20,7 +20,7 @@
         <div class="Features__item-copy">
           <h4>Involve your whole community</h4>
           <p>
-            Friends and family contribute to college or saving for that special thing rather than unwanted presents. And, everyone gets to watch as their gifts add up to a meaningful impact on your kid’s life.          
+            Friends and family help save for college or something special rather send another unwanted present. And, then watch as their gifts add up to a meaningful result.        
           </p>
         </div>
       </div>
