--- a/app/assets/stylesheets/posts/posts.scss
+++ b/app/assets/stylesheets/posts/posts.scss
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
     @media (min-width: $desktop-width) {
       flex-direction: row;
@@ -25,13 +26,15 @@
   }
 
   &__main {
-    @media (min-width: $desktop-width) {
-      margin-right: 100px;
-    }
+    max-width: 900px;
   }
 
   &__other {
     margin-bottom: 50px;
+
+    @media (min-width: $desktop-width) {
+      margin-left: 100px;
+    }
 
     h3 {
       font-weight: 400;
