terms and privacy copy

--- a/app/views/terms/privacy.html.erb
+++ b/app/views/terms/privacy.html.erb
@@ -1,10 +1,127 @@
 <div class="Terms parent">
-  <div class="Content">
-    <h1>Terms and Conditions</h1>
-    <h3>Heading</h3>
-    <p>Effective date: October 25, 2018</p>
-    <p>Till Financial, Inc. ("us", "we", or "our") operates the www.tillfinancial.io website (hereinafter referred to as the "Service").</p>
-    <p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data. Our Privacy Policy for Till Financial, Inc. is managed with the help of Privacy Policies.</p>
-    <p>We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, the terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, accessible from www.tillfinancial.io</p>
+  <div class="Content" style="margin: 0 10px 20px 10px;">
+    <h1>Till Financial’s Privacy Notice</h1>
+    <p>Last updated 17 December 2018</p>
+    <br/>
+    <p>Thank you for choosing to be part of our community at Till Financial, Inc. (“Till”, “company”, “we”, “us”, or “our”). We are committed to protecting your personal information and your right to privacy. If you have any questions or concerns about our policy, or our practices with regards to your personal information, please contact us at privacy@tillfinancial.io</p>
+    <p>When you visit our website https://tillfinancial.io (“Site”) and use our services, you trust us with your personal information. We take your privacy very seriously. In this privacy notice, we describe our privacy policy. We seek to explain to you in the clearest way possible what information we collect, how we use it and what rights you have in relation to it. We hope you take some time to read through it carefully, as it is important. If there are any terms in this privacy policy that you do not agree with, please discontinue use of our site and our services.</p>
+    <p>This privacy policy applies to all information collected through our website or mobile application, and/or any related services, sales, marketing or events (we refer to them collectively in this privacy policy as the “Site“).</p>  
+    <p>Please read this privacy policy carefully as it will help you make informed decisions about sharing your personal information with us.</p>
+    
+    <h4><u>WHAT INFORMATION DO WE COLLECT?</u></h4>
+    <p>Personal information you disclose to us</p>
+    <p>We collect personal information that you voluntarily provide to us when registering with Till Financial, expressing an interest in obtaining information about us or our products and services, when participating in activities on the Site or otherwise contacting us.</p>
+    <p>The personal information that we collect depends on the context of your interactions with us and the Site, the choices you make and the products and features you use. The personal information we collect can include the following:</p>
+    
+    <ul style="list-style: disc; padding-left: 40px;">
+      <li style="margin-bottom: 20px;">Name and Contact Data. We collect your first and last name, email address, postal address, phone number, and other similar contact data.</li>
+      <li style="margin-bottom: 20px;">Credentials. We collect passwords, password hints, and similar security information used for authentication and account access.</li>
+      <li>  Payment Data. We collect data necessary to process your payment if you make purchases, such as your payment instrument number (such as a credit card number), and the security code associated with your payment instrument. All payment data is stored by our payment processor and you should review its privacy policies and contact the payment processor directly to respond to your questions.</li>
+    </ul>     
+    <p>All personal information that you provide to us must be true, complete and accurate, and you must notify us of any changes to such personal information.</p>
+    
+    <p>Information automatically collected</p>
+    
+    <p>We automatically collect certain information when you visit, use or navigate the Site. This information does not reveal your specific identity (like your name or contact information) but may include device and usage information, such as your IP address, browser and device characteristics, operating system, language preferences, referring URLs, device name, country, location, information about how and when you use our Site and other technical information.  If you access our site with your mobile device, we may automatically collect device information (such as your mobile device ID, model and manufacturer), operating system, version information and IP address. This information is primarily needed to maintain the security and operation of our Site, and for our internal analytics and reporting purposes.</p>
+    
+    <p>Like many businesses, we also collect information through cookies and similar technologies.</p> 
+    
+    <p>Information collected from other Sources</p>
+    
+    <p>We may obtain information about you from other sources, such as public databases, joint marketing partners, social media platforms (such as Facebook), as well as from other third parties. Examples of the information we receive from other sources include: social media profile information (your name, gender, birthday, email, current city, state and country, user identification numbers for your contacts, profile picture URL and any other information that you choose to make public); marketing leads and search results and links, including paid listings (such as sponsored links).</p>
+    
+    <h4><u>HOW DO WE USE YOUR INFORMATION?</u></h4>
+    
+    <p>We use personal information collected via our Site for a variety of business purposes described below. We process your personal information for these purposes in reliance on our legitimate business interests (“Business Purposes”), in order to enter into or perform a contract with you (“Contractual”), with your consent (“Consent”), and/or for compliance with our legal obligations (“Legal Reasons”). We indicate the specific processing grounds we rely on next to each purpose listed below.</p>
+    
+    <p>We use the information we collect or receive:</p>
+    
+    <ul style="list-style: disc; padding-left: 40px;">
+      <li style="margin-bottom: 20px;">To facilitate account creation and logon process with your Consent.</li>
+      <li style="margin-bottom: 20px;">To send you marketing and promotional communications for Business Purposes and/or with your Consent. We and/or our third party marketing partners may use the personal information you send to us for our marketing purposes, if this is in accordance with your marketing preferences. You can opt-out of our marketing emails at any time (see the “What are Your Privacy Rights?” section below).</li>
+      <li style="margin-bottom: 20px;">To send administrative information to you for related to your account, our business purposes, and/or for legal reasons. We may use your personal information to send you product, service and new feature information and/or information about changes to our terms, conditions, and policies.</li>
+      <li style="margin-bottom: 20px;">Deliver targeted advertising to you for our Business Purposes and/or with your Consent. We may use your information to develop and display content and advertising (and work with third parties who do so) tailored to your interests and/or location and to measure its effectiveness.</li>
+      <li style="margin-bottom: 20px;">Request Feedback for our Business Purposes and/or with your Consent. We may use your information to request feedback and to contact you about your use of our Site.</li>
+      <li style="margin-bottom: 20px;">To protect our Site for Business Purposes and/or Legal Reasons.  We may use your information as part of our efforts to keep our Site safe and secure (for example, for fraud monitoring and prevention).</li>
+      <li style="margin-bottom: 20px;">To enforce our terms, conditions and policies for our business purposes and as legally required.</li>
+      <li style="margin-bottom: 20px;">To enforce our terms, conditions and policies for our business purposes and as legally required.</li>
+      <li style="margin-bottom: 20px;">To respond to legal requests and prevent harm as legally required. If we receive a subpoena or other legal request, we may need to inspect the data we hold to determine how to respond.</li>
+      <li style="margin-bottom: 20px;">For other Business Purposes. We may use your information for other Business Purposes, such as data analysis, identifying usage trends, determining the effectiveness of our promotional campaigns and to evaluate and improve our Site, products, services, marketing and your experience.</li>
+    </ul>
+
+    <h4><u>WILL YOUR INFORMATION BE SHARED WITH ANYONE?</u></h4>
+    
+    <p>We only share and disclose your information in the following situations:</p>
+    
+    <ul style="list-style: disc; padding-left: 40px;">
+      <li style="margin-bottom: 20px;">Compliance with Laws. We may disclose your information where we are legally required to do so in order to comply with applicable law, governmental requests, a judicial proceeding, court order, or legal process, such as in response to a court order or a subpoena (including in response to public authorities to meet national security or law enforcement requirements).</li>
+      <li style="margin-bottom: 20px;">Vital Interests and Legal Rights. We may disclose your information where we believe it is necessary to investigate, prevent, or take action regarding potential violations of our policies, suspected fraud, situations involving potential threats to the safety of any person and illegal activities, or as evidence in litigation in which we are involved.</li>
+      <li style="margin-bottom: 20px;">Vendors, Consultants and Other Third-Party Service Providers. We may share your data with third-party vendors, service providers, contractors or agents who perform services for us or on our behalf and require access to such information to do that work. Examples include: payment processing, data analysis, email delivery, hosting services, customer service and marketing efforts. We may allow selected third parties to use tracking technology on the Site, which will enable them to collect data about how you interact with the Site over time.  This information may be used to, among other things, analyze and track data, determine the popularity of certain content and better understand online activity. Unless described in this Policy, we do not share, sell, rent or trade any of your information with third parties for their promotional purposes.</li>
+      <li style="margin-bottom: 20px;">Business Transfers. We may share or transfer your information in connection with, or during negotiations of, any merger, sale of company assets, financing, or acquisition of all or a portion of our business to another company.</li>
+      <li style="margin-bottom: 20px;">Affiliates. We may share your information with our affiliates, in which case we will require those affiliates to honor this privacy policy. Affiliates include our parent company and any subsidiaries, joint venture partners or other companies that we control or that are under common control with us.</li>
+      <li style="margin-bottom: 20px;">Business Partners. We may share your information with our business partners to offer you certain products, services or promotions.</li>
+      <li style="margin-bottom: 20px;">With your Consent. We may disclose your personal information for any other purpose with your consent.</li>
+    </ul>
+
+    <h4><u>DO WE USE COOKIES AND OTHER TRACKING TECHNOLOGIES?</u></h4>
+    
+    <p>We may use cookies and similar tracking technologies (like web beacons and pixels) to access or store information.</p>
+    
+    <h4><u>IS YOUR INFORMATION TRANSFERRED INTERNATIONALLY?</u></h4>
+    
+    <p>Our servers are located in the United States. We do not target users outside of the United States. If you are accessing our Site from outside the United States, please be aware that your information may be transferred to, stored, and processed by us in our facilities and by those third parties with whom we may share your personal information (see “Will Your Information Be Shared With Anyone?” above), in the United States.</p>
+    
+    <p>If you are a resident in the European Economic Area, then these countries may not have data protection or other laws as comprehensive as those in your country. We will however take all necessary measures to protect your personal information in accordance with this privacy policy and applicable law.</p>
+    
+    <h4><u>WHAT ABOUT THIRD-PARTY WEBSITES?</u></h4>
+    
+    <p>The Site may contain advertisements from third parties that are not affiliated with us and which may link to other websites, online services or mobile applications. We cannot guarantee the safety and privacy of data you provide to any third parties. Any data collected by third parties is not covered by this privacy policy. We are not responsible for the content or privacy and security practices and policies of any third parties, including other websites, services or applications that may be linked to or from the Site. You should review the policies of such third parties and contact them directly to respond to your questions.</p>
+    
+    <h4><u>HOW LONG DO WE KEEP YOUR INFORMATION?</u></h4>
+    
+    <p>We will only keep your personal information for as long as it is necessary for the purposes set out in this privacy policy, unless a longer retention period is required or permitted by law (such as tax, accounting or other legal requirements). No purpose in this policy will require us keeping your personal information for longer than 90 days past the termination of your account.</p>
+    
+    <p>When we have no ongoing legitimate business need to process your personal information, we will either delete or anonymize it, or, if this is not possible (for example, because your personal information has been stored in backup archives), then we will securely store your personal information and isolate it from any further processing until deletion is possible.</p>
+    
+    <h4><u>HOW DO WE KEEP YOUR INFORMATION SAFE?</u></h4>
+    
+    <p>We have implemented appropriate technical and organizational security measures designed to protect the security of any personal information we process. However, please also remember that we cannot guarantee that the internet itself is 100% secure. Although we will do our best to protect your personal information, transmission of personal information to and from our Site is at your own risk. You should only access the services within a secure environment.</p>
+    
+    <h4><u>DO WE COLLECT INFORMATION FROM MINORS?</u></h4>
+    
+    <p>We do not knowingly solicit data from or market to children under 18 years of age.  By using the Site, you represent that you are at least 18 or that you are the parent or guardian of such a minor and consent to such minor dependent’s use of the Site.  If we learn that personal information from users less than 18 years of age has been collected, we will deactivate the account and take reasonable measures to promptly delete such data from our records.  If you become aware of any data we have collected from children under age 18, please contact us at privacy@tillfinancial.io.</p>
+    
+    <h4><u>WHAT ARE YOUR PRIVACY RIGHTS?</u></h4>
+    
+    <p>Account Information</p>
+    
+    <p>You may at any time review or change the information in your account or terminate your account by:</p>
+    
+    <ul style="list-style: disc; padding-left: 40px;">
+      <li style="margin-bottom: 20px;">Logging into your account settings and updating your account</li>
+      <li style="margin-bottom: 20px;">Contacting us using the contact information provided below</li>
+    </ul>
+    
+    <p>Upon your request to terminate your account, we will deactivate or delete your account and information from our active databases. However, some information may be retained in our files to prevent fraud, troubleshoot problems, assist with any investigations, enforce our Terms of Use and/or comply with legal requirements.</p>
+    
+    <p>Cookies and similar technologies: Most Web browsers are set to accept cookies by default. If you prefer, you can usually choose to set your browser to remove cookies and to reject cookies. If you choose to remove cookies or reject cookies, this could affect certain features or services of our Site. To opt-out of interest-based advertising by advertisers on our Site visit http://www.aboutads.info/choices/. [For further information, please see our Cookie Policy]</p>
+    
+    <p>Opting out of email marketing: You can unsubscribe from our marketing email list at any time by clicking on the unsubscribe link in the emails that we send or by contacting us using the details provided below. You will then be removed from the marketing email list – however, we will still need to send you service-related emails that are necessary for the administration and use of your account. You can also opt-out by contacting us using the contact information provided below</p>
+    
+    <h4><u>DO WE RESPOND TO DO-NOT-TRACK SIGNALS?</u></h4>
+    
+    <p>Most web browsers and some mobile operating systems and mobile applications include a Do-Not-Track (“DNT”) feature or setting you can activate to signal your privacy preference not to have data about your online browsing activities monitored and collected. No uniform technology standard for recognizing and implementing DNT signals has been finalized. As such, we do not currently respond to DNT browser signals or any other mechanism that automatically communicates your choice not to be tracked online. If a standard for online tracking is adopted that we must follow in the future, we will inform you about that practice in a revised version of this Privacy Policy.</p>
+    
+    <h4><u>DO CALIFORNIA RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</u></h4>
+    
+    <p>California Civil Code Section 1798.83, also known as the “Shine The Light” law, permits our users who are California residents to request and obtain from us, once a year and free of charge, information about categories of personal information (if any) we disclosed to third parties for direct marketing purposes and the names and addresses of all third parties with which we shared personal information in the immediately preceding calendar year. If you are a California resident and would like to make such a request, please submit your request in writing to us using the contact information provided below.</p>
+    
+    <h4><u>DO WE MAKE UPDATES TO THIS POLICY?</u></h4>
+    
+    <p>We may update this privacy policy from time to time. The updated version will be indicated by an updated “Revised” date and the updated version will be effective as soon as it is accessible. If we make material changes to this privacy policy, we may notify you either by prominently posting a notice of such changes or by directly sending you a notification. We encourage you to review this privacy policy frequently to be informed of how we are protecting your information.</p>
+    
+    <h4><u>HOW CAN YOU CONTACT US ABOUT THIS POLICY?</u></h4>
+    
+    <p>If you have questions or comments about this policy, email us at privacy@tillfinancial.io or by post to: Till Financial, Inc., 4 Bloom Street, Nantucket MA 02554.</p>
   </div>
 </div>
